--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <div class="about-section">
     <img src="images\profile-pic.jpeg" alt="Akib Zaman" class="profile-img">
     <a href="akib-cv" class="btn" download>Download CV</a>
-    <p>I am a PhD (ABD) specializing in Human-Computer Interaction at the University of Texas at Arlington. My research focuses on data-centric methods to understand AI Explainability.</p>
+    <p>I am a PhD (ABD) <b>[Graduating: May 2024]</b> specializing in Human-Computer Interaction at the University of Texas at Arlington. My research focuses on data-centric methods to understand AI Explainability. I am supervised by <a href="http://cearto.com/" target="_blank">Dr. Cesar Torres</a>.</p>
 	<!-- <a href="akib-cv" class="btn" download>Download CV</a> -->
     <div class="skills-container">
         <!-- <h4>Skills:</h4> -->
