--- a/research.html
+++ b/research.html
@@ -9,6 +9,7 @@
             <li>Explainable AI</li>
             <li>Model Analysis</li>
             <li>Data Labeling</li>
+            <li>Crowdsourcing</li>
         </ul>
         <h4><i class="fas fa-microchip"></i> Components Involved:</h4>
         <ul class="comp-list">
